...
import pdm.battleshipApp.domain.UserDetail
import pdm.battleshipApp.domain.UserIdAndToken
import pdm.battleshipApp.domain.UserState
import pdm.battleshipApp.ui.TopBar
import pdm.battleshipApp.utils.RefreshingState

const val UnauthenticatedPlayerScreenTag = "UnauthenticatedPlayerScreen"
const val AuthenticatedPlayerScreenTag = "AuthenticatedPlayerScreen"

@Composable
fun PlayerScreen(
    onBackRequested: () -> Unit = {},
    goToLogin: () -> Unit = {},
    goToRegister: () -> Unit = {}
...
