...
    val waitingRoom: WaitingRoom?,
    val loadingState: RefreshingState = RefreshingState.Idle,
    val resultState: ResponseState?,
    val waitingRoomMsg: WaitingRoomMsg?
)

const val AuthenticatedWaitingRoomScreenTag = "AuthenticatedWaitingRoomScreen"
const val UnauthenticatedWaitingRoomScreenTag = "UnauthenticatedWaitingRoomScreen"

@Composable
fun WaitingRoomScreen(
    state: WaitingRoomScreenState,
    onBackRequested: () -> Unit,
    startGame: (Int) -> Unit = {}
...
